--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- We also need to define the Font Awesome icon CDN path in the public/index.html. It allow us to add some useful icons in our Vue app. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" 
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+      crossorigin="anonymous">
   </head>
   <body>
     <noscript>
